Tiger_frontend/project1_test_code_example/tests/correct/simple2.tiger
main let
    var a, b : int := 1;
in begin
    a := b := 4 + 3;
end