Tiger_frontend/project1_test_code_example/tests/errors/minimum-program.tiger
main let

in begin
    break;
end